# django-image-board

./: .gitignore  docker-compose.yml  manage.py  pyproject.toml
boards/: admin.py  forms.py  models.py  urls.py  views.py
boards/migrations/: 0001_initial.py  0002_board_delete_boards.py  0003_thread.py  0004_alter_thread_image.py  0005_alter_thread_image.py
boards/templates/: base.html  board_details.html  thread_form.html
core/: views.py
core/templates/: index.html
image_board/: asgi.py  settings.py  urls.py  wsgi.py
